environments/aws-fck-nat/infrastructure/igws.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = upper(var.name_prefix) }
}
